# swg

./: .gitignore  LICENSE  README.md  pyproject.toml
src/swg/: __init__.py  articles.py  render.py  settings.py
src/swg/templates/default/: post.html
src/swg/templates/example/: simple.jinja2
tests/: test_articles.py  test_render.py  test_settings.py
