[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swg"
version = "0.0.1"
authors = [
  { name="Alfredo Becerra", email="alfredo.becerra@asociacionaepi.es" },
]
description = "A Static Website Generator"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'Jinja2',
  'markdown',
  'markdown-full-yaml-metadata',
]
